--- a/examples/kernel_perceptron.ipynb
+++ b/examples/kernel_perceptron.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import numpy as np\n",
     "from IPython.display import IFrame, HTML\n",
-    "from vizml.perceptron import KernelPerceptron"
+    "from vizml.kernel_perceptron import KernelPerceptron"
    ]
   },
   {
