--- a/examples/linear_model/perceptron.ipynb
+++ b/examples/linear_model/perceptron.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Perceptron"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,7 +15,7 @@
    "source": [
     "%matplotlib inline\n",
     "import numpy as np\n",
-    "from vizml.perceptron import Perceptron\n",
+    "from vizml.linear_model import Perceptron\n",
     "from IPython.display import IFrame, HTML"
    ]
   },
