--- a/examples/linear_model/voted_perceptron.ipynb
+++ b/examples/linear_model/voted_perceptron.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "from vizml.perceptron import VotedPerceptron\n",
+    "from vizml.linear_model import VotedPerceptron\n",
     "from IPython.display import IFrame, HTML\n",
     "np.random.seed(0)"
    ]
